# xos

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: compiler.yml  full_release.yml  main.yml
src/apps/life/: life.py
src/apps/study/: study.py
src/apps/tv/: tv.py
src/crates/xos-app/: Cargo.toml
src/crates/xos-app/src/: game_runner.rs  ios_ffi.rs  python_ui.rs
src/crates/xos-app/src/apps/: python_apps.rs  xpy_wasm.rs
src/crates/xos-audio/: Cargo.toml
src/crates/xos-audio/src/: lib.rs
src/crates/xos-cli/: Cargo.toml
src/crates/xos-cli/src/: compile.rs  main.rs
src/crates/xos-core/: Cargo.toml
src/crates/xos-core/src/: burn_raster.rs  compute_device.rs  fs.rs  gpu_present.rs  lib.rs
src/crates/xos-core/src/ai/: mod.rs
src/crates/xos-core/src/engine/: engine.rs  f3_menu.rs  native_engine.rs  wasm_engine.rs
src/crates/xos-core/src/rasterizer/: cache.rs  mod.rs
src/crates/xos-core/src/ui/: onscreen_keyboard.rs
src/crates/xos-java/src/: lib.rs
src/crates/xos-mesh/src/: lan.rs  lan_crypto.rs  relay.rs
src/crates/xos-python/: Cargo.toml
src/crates/xos-python/src/: ai.rs  chat.rs  clipboard.rs  device.rs  device_policy.rs  dialoguer.rs  dtypes.rs  frame_tensor.rs  json_codec.rs  lib.rs  math.rs  pack.rs  rasterizer.rs  runtime.rs  staged_native_python_app.rs  system.rs  tensor_buf.rs  tensors.rs  xos_module.rs
src/crates/xos-python/src/engine/: py_bindings.rs  py_engine_tls.rs  pyapp.rs
src/crates/xos-python/src/mesh/: mod.rs
src/crates/xos-python/src/ops/: conv.rs  mod.rs
src/crates/xos-tensor/: Cargo.toml
src/crates/xos-tensor/src/: conv.rs  lib.rs  wgpu_init.rs
src/crates/xos-wasm/: Cargo.toml
src/crates/xos-wasm/src/: lib.rs
src/py/engine/: pyapp.rs
src/tests/rasterizer/: test_shapes.py
src/tests/space/: test_spaces_transforms_and_systems.py
src/tests/tensors/: test_convolutions.py  test_devices.py  test_dtypes.py  test_random.py  test_string_functions.py
(+20 files in other folders)
